# XRD-Toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_HEALTH.md  README.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  install_macos.command  pyproject.toml  run_finder.bat  run_finder.command  run_finder.sh  run_finder_cli.bat  run_finder_cli.command  run_finder_cli.sh  setup_env.bat  setup_env.command  setup_env.sh  update_macos.command
XRD_Finder/: RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.4.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  app.json  launch_xrd_finder.bat  requirements.txt  run_finder.bat  run_finder.command  run_finder.sh  run_finder_cli.bat  run_finder_cli.command  run_finder_cli.sh  run_finder_silent.vbs
XRD_Finder/xrd_finder/: __init__.py
scripts/: build_macos_dmg.command  build_macos_pkg.command  build_release_archive.py  profile_finder.py
toolkit/: launch_xrd_finder_preview.command  launch_xrd_finder_preview.ps1  launch_xrd_finder_preview_macos.py  manifest.json  setup_sci_env.bat  setup_sci_env.command  setup_xrd_toolkit_env.bat  setup_xrd_toolkit_env.command
toolkit/updates/: xrd_finder.json
xrd_manager/: __init__.py  app.py
xrd_manager/apps/: finder_gui.py
xrd_manager/core/: __init__.py  pattern.py  phase.py  project.py  refinement.py  result.py  series.py
xrd_manager/finder/: __init__.py  models.py  service.py
xrd_manager/io/: __init__.py  cif_loader.py  project_io.py
xrd_manager/layers/: calculated_layer.py  difference_layer.py  observed_layer.py  (+2 more)
(+80 files in other folders)
