[project]
name = "xrd-finder-standalone"
version = "1.0.1"
description = "Cross-platform XRD phase finder for powder diffraction search-match workflows."
requires-python = ">=3.11"
dependencies = [
    "gemmi",
    "numpy",
    "pyqtgraph",
    "PySide6",
    "scipy",
]

[project.scripts]
xrd-finder = "xrd_manager.apps.finder_cli:main"
xrd-finder-gui = "xrd_manager.apps.finder_gui:main"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "xrd_manager_data",
]
